fix to user tracItem
